--- a/css/custom.css
+++ b/css/custom.css
@@ -172,3 +172,11 @@ div .vhh {
 h1 {
   font-family: 'Roboto', sans-serif;
 }
+
+iframe {
+  margin-left: -5vw;
+  height: 80vh;
+  width: 90vw;
+  background-color: white;
+  overflow: scroll;
+} 
