--- a/css/custom.css
+++ b/css/custom.css
@@ -245,3 +245,13 @@ em {
   color: rgb(148, 209, 247);
   font-style: normal;
 }
+
+#webvowl {
+  height: 80vh;
+  width: 100%;
+  align-self: center;
+}
+
+p > span > a {
+  text-decoration: underline;
+}
