--- a/css/custom.css
+++ b/css/custom.css
@@ -215,7 +215,7 @@ iframe {
   margin-left: -5vw;
   height: 150vh;
   width: 100vw;
-  background-color: #202020;
+  background-color: white;
   overflow: hidden;
 }
 
